# Bank_Queue

./: .env  Dockerfile  manage.py  pyproject.toml  requirements.txt
Bank_Queue/: asgi.py  settings.py  urls.py  wsgi.py
terminal/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
